[project]
name = "tui-typer"
version = "0.1.0"
description = "A typer CLI with TUI textual integration."
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "coverage>=7.6.0",
    "textual>=7.5.0",
    "typer>=0.21.1",
]
